--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -22,6 +22,12 @@ jobs:
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
-      run: mix deps.get
+      run:
+        mix deps.get
+        mix deps.compile
+    - name: Check formatting
+      run: mix format --check-formatted
+    - name: Check warnings
+      run: mix compile --warnings-as-errors
     - name: Run tests
       run: mix test
